# StockfishMcp

./: .gitignore  Dockerfile  README.md  chess_logic.py  exampleGame.md  mcp_server.py  mcp_settings.example.json  pyproject.toml  requirements.txt  server.json  setup.py
.github/workflows/: publish-mcp.yml
stockfish_mcp/: __main__.py  chess_logic.py  mcp_server.py
