[build-system]
requires = ["setuptools>=61.0", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockfish-mcp"
version = "0.2.0"
authors = [
  { name="Stephan Botes", email="stephanbotes@gmail.com" },
]
description = "A Stockfish MCP server"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp",
    "chess",
    "stockfish",
]

[project.scripts]
stockfish-mcp = "stockfish_mcp.__main__:main"

[tool.setuptools.packages.find]
namespaces = true

